--- a/politica-privacidad-es.html
+++ b/politica-privacidad-es.html
@@ -1,63 +1,118 @@
-Política de Privacidad - Ciudad Friki
-En Ciudad Friki, valoramos tu privacidad y cumplimos con la Ley 1581 de 2012 de Colombia.
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Política de Privacidad - Ciudad Friki</title>
+    <style>
+        :root {
+            --primary-color: #5D3FD3;
+            --text-color: #333;
+            --bg-color: #f4f7f6;
+            --card-bg: #ffffff;
+        }
+        body { 
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; 
+            line-height: 1.6; 
+            color: var(--text-color); 
+            max-width: 850px; 
+            margin: 0 auto; 
+            padding: 40px 20px; 
+            background-color: var(--bg-color); 
+        }
+        .container { 
+            background: var(--card-bg); 
+            padding: 50px; 
+            border-radius: 12px; 
+            box-shadow: 0 4px 15px rgba(0,0,0,0.08); 
+        }
+        h1 { 
+            color: var(--primary-color); 
+            text-align: center;
+            font-size: 2rem;
+            margin-bottom: 30px;
+            border-bottom: 3px solid var(--primary-color);
+            padding-bottom: 15px;
+        }
+        h2 { 
+            color: var(--primary-color); 
+            margin-top: 30px; 
+            font-size: 1.4rem;
+            border-left: 5px solid var(--primary-color);
+            padding-left: 15px;
+        }
+        p, li { 
+            margin-bottom: 15px; 
+            text-align: justify; 
+        }
+        ul {
+            margin-bottom: 20px;
+        }
+        strong { 
+            color: #000; 
+        }
+        .highlight-box {
+            background-color: #f0edff;
+            padding: 15px;
+            border-radius: 8px;
+            margin: 20px 0;
+            border: 1px solid #d1c4e9;
+        }
+        .footer { 
+            margin-top: 50px; 
+            font-size: 0.9rem; 
+            color: #666; 
+            text-align: center; 
+            border-top: 1px solid #eee; 
+            padding-top: 25px; 
+        }
+        @media (max-width: 600px) {
+            .container { padding: 25px; }
+            h1 { font-size: 1.6rem; }
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Política de Privacidad - Ciudad Friki</h1>
+        
+        <p>En <strong>Ciudad Friki</strong>, valoramos tu privacidad y cumplimos con la <strong>Ley 1581 de 2012</strong> de Colombia.</p>
 
-1. Responsable del Tratamiento
-El tratamiento de los datos es realizado por Mauricio Saldarriaga García (el Desarrollador), en colaboración con la Corporación Ciudad Friki (NIT: 901.597.939-0). Para cualquier duda, contáctanos en: udcarkangel@gmail.com.
+        <h2>1. Responsable del Tratamiento</h2>
+        <p>El tratamiento de los datos es realizado por <strong>Mauricio Saldarriaga García</strong> (el Desarrollador), en colaboración con la <strong>Corporación Ciudad Friki</strong> (NIT: 901.597.939-0). Para cualquier duda, contáctanos en: <strong>udcarkangel@gmail.com</strong>.</p>
 
-2. Recolección de Datos
-Recolectamos la siguiente información para mejorar tu experiencia:
+        <h2>2. Recolección de Datos</h2>
+        <p>Recolectamos la siguiente información para mejorar tu experiencia:</p>
+        <ul>
+            <li><strong>Información Básica:</strong> Nombre, correo electrónico, ciudad y foto de perfil.</li>
+            <li><strong>Uso de la App:</strong> Eventos guardados, reseñas, respuestas a encuestas y preferencias.</li>
+            <li><strong>Actividades y Juegos:</strong> Puntuaciones, niveles del modo historia, logros y uso de Frikicoins (puntos de lealtad sin valor monetario real).</li>
+            <li><strong>Información Técnica:</strong> Modelo de dispositivo y sistema operativo para soporte técnico.</li>
+        </ul>
 
-Información Básica: Nombre, correo electrónico, ciudad y foto de perfil.
+        <h2>3. Uso de la Información</h2>
+        <p>Utilizamos tus datos para:</p>
+        <ul>
+            <li>Gestionar tu cuenta y autenticación segura a través de <strong>Supabase</strong>.</li>
+            <li>Personalizar recomendaciones de eventos y dinámicas de juego.</li>
+            <li>Generar estadísticas anonimizadas y agregadas sobre la comunidad para fines culturales y académicos (nunca compartiremos tus respuestas individuales identificables).</li>
+        </ul>
 
-Uso de la App: Eventos guardados, reseñas, respuestas a encuestas y preferencias.
+        <h2>4. Compartir con Terceros</h2>
+        <p><strong>No vendemos tus datos</strong> a spammers o empresas de marketing. Autorizas el uso de datos bajo estas condiciones:</p>
+        <ul>
+            <li><strong>Proveedores:</strong> Compartimos datos técnicos con <strong>Supabase Inc.</strong> para almacenamiento y hosting.</li>
+            <li><strong>Aliados Estratégicos:</strong> Datos anonimizados y agregados de encuestas para estudios de censo y planificación de políticas culturales.</li>
+            <li><strong>Beneficios:</strong> Datos de contacto básicos con patrocinadores para ofrecerte beneficios exclusivos, siempre bajo tu consentimiento.</li>
+        </ul>
 
-Actividades y Juegos: Puntuaciones, niveles del modo historia, logros y uso de Frikicoins (puntos de lealtad sin valor monetario real).
+        <h2>5. Seguridad</h2>
+        <p>Implementamos medidas técnicas y administrativas como:</p>
+        <ul>
+            <li>Encriptación de datos sensibles.</li>
+            <li>Protocolos de acceso restringido a la base de datos de Supabase.</li>
+            <li>Auditorías internas de seguridad.</li>
+        </ul>
 
-Información Técnica: Modelo de dispositivo y sistema operativo para soporte técnico.
-
-3. Uso de la Información
-Utilizamos tus datos para:
-
-Gestionar tu cuenta y autenticación segura a través de Supabase.
-
-Personalizar recomendaciones de eventos y dinámicas de juego.
-
-Generar estadísticas anonimizadas y agregadas sobre la comunidad para fines culturales y académicos (nunca compartiremos tus respuestas individuales identificables).
-
-4. Compartir con Terceros
-No vendemos tus datos a spammers o empresas de marketing. Autorizas el uso de datos bajo estas condiciones:
-
-Proveedores: Compartimos datos técnicos con Supabase Inc. para almacenamiento y hosting.
-
-Aliados Estratégicos: Datos anonimizados y agregados de encuestas para estudios de censo y planificación de políticas culturales.
-
-Beneficios: Datos de contacto básicos con patrocinadores para ofrecerte beneficios exclusivos, siempre bajo tu consentimiento.
-
-5. Seguridad
-Implementamos medidas técnicas y administrativas como:
-
-Encriptación de datos sensibles.
-
-Protocolos de acceso restringido a la base de datos de Supabase.
-
-Auditorías internas de seguridad.
-
-6. Derechos del Usuario
-Tienes derecho a conocer, actualizar, rectificar y suprimir tus datos. Puedes solicitar la eliminación de tu cuenta enviando un correo a udcarkangel@gmail.com o usando la opción dentro de la App. Procesaremos la eliminación en un plazo máximo de 30 días.
-
-7. Autenticación con Google
-Al iniciar sesión con Google, recibimos tu nombre, email y foto. No almacenamos tu contraseña. Puedes revocar este acceso desde tu cuenta de Google en cualquier momento.
-
-8. Notificaciones Push
-Solicitamos permiso para enviarte alertas sobre eventos, encuestas o actualizaciones del sistema. Puedes desactivarlas desde la configuración de tu dispositivo.
-
-9. Cookies y Almacenamiento Local
-Utilizamos el almacenamiento local del dispositivo para mantener tu sesión activa y guardar preferencias de idioma o tema, optimizando el rendimiento offline.
-
-10. Menores de Edad
-La aplicación requiere una edad mínima de 13 años. Los menores de 18 años deben contar con la autorización de sus padres o tutores legales.
-
-11. Transferencias Internacionales y Cambios
-Tus datos pueden ser procesados en servidores fuera de Colombia (infraestructura global). Nos reservamos el derecho de actualizar esta política; te notificaremos cualquier cambio importante a través de la aplicación.
-
-Última actualización: Febrero 2026
+        <h2>6. Derechos del Usuario</h2>
+        <p>Tienes derecho a conocer, actualizar, rectificar y suprimir tus datos. Puedes solicitar la eliminación
