--- a/privacy-policy-en.html
+++ b/privacy-policy-en.html
@@ -1,63 +1,101 @@
-Privacy Policy - Ciudad Friki
-At Ciudad Friki, we value your privacy and comply with international data protection standards.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy - Ciudad Friki</title>
+    <style>
+        :root {
+            --primary-color: #5D3FD3;
+            --text-color: #333;
+            --bg-color: #f4f7f6;
+            --card-bg: #ffffff;
+        }
+        body { 
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; 
+            line-height: 1.6; 
+            color: var(--text-color); 
+            max-width: 850px; 
+            margin: 0 auto; 
+            padding: 40px 20px; 
+            background-color: var(--bg-color); 
+        }
+        .container { 
+            background: var(--card-bg); 
+            padding: 50px; 
+            border-radius: 12px; 
+            box-shadow: 0 4px 15px rgba(0,0,0,0.08); 
+        }
+        h1 { 
+            color: var(--primary-color); 
+            text-align: center;
+            font-size: 2rem;
+            margin-bottom: 30px;
+            border-bottom: 3px solid var(--primary-color);
+            padding-bottom: 15px;
+        }
+        h2 { 
+            color: var(--primary-color); 
+            margin-top: 30px; 
+            font-size: 1.4rem;
+            border-left: 5px solid var(--primary-color);
+            padding-left: 15px;
+        }
+        p, li { 
+            margin-bottom: 15px; 
+            text-align: justify; 
+        }
+        ul {
+            margin-bottom: 20px;
+        }
+        strong { 
+            color: #000; 
+        }
+        .highlight-box {
+            background-color: #f0edff;
+            padding: 15px;
+            border-radius: 8px;
+            margin: 20px 0;
+            border: 1px solid #d1c4e9;
+        }
+        .footer { 
+            margin-top: 50px; 
+            font-size: 0.9rem; 
+            color: #666; 
+            text-align: center; 
+            border-top: 1px solid #eee; 
+            padding-top: 25px; 
+        }
+        @media (max-width: 600px) {
+            .container { padding: 25px; }
+            h1 { font-size: 1.6rem; }
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Privacy Policy - Ciudad Friki</h1>
+        
+        <p>At <strong>Ciudad Friki</strong>, we value your privacy and comply with the <strong>Law 1581 of 2012</strong> of Colombia.</p>
 
-1. Data Controller
-The data processing is carried out by Mauricio Saldarriaga García (the Developer), in collaboration with Corporación Ciudad Friki (NIT: 901.597.939-0). Contact: udcarkangel@gmail.com.
+        <h2>1. Data Controller</h2>
+        <p>Data processing is carried out by <strong>Mauricio Saldarriaga García</strong> (the Developer), in collaboration with <strong>Corporación Ciudad Friki</strong> (NIT: 901.597.939-0). For any questions, contact us at: <strong>udcarkangel@gmail.com</strong>.</p>
 
-2. Data Collection
-We collect the following information to enhance your experience:
+        <h2>2. Data Collection</h2>
+        <p>We collect the following information to improve your experience:</p>
+        <ul>
+            <li><strong>Basic Information:</strong> Name, email, city, and profile picture.</li>
+            <li><strong>App Usage:</strong> Saved events, reviews, survey responses, and preferences.</li>
+            <li><strong>Activities and Gaming:</strong> Scores, story mode levels, achievements, and Frikicoins usage (loyalty points with no real monetary value).</li>
+            <li><strong>Technical Information:</strong> Device model and operating system for technical support.</li>
+        </ul>
 
-Basic Information: Name, email, city, and profile picture.
+        <h2>3. Use of Information</h2>
+        <p>We use your data to:</p>
+        <ul>
+            <li>Manage your account and secure authentication through <strong>Supabase</strong>.</li>
+            <li>Personalize event recommendations and gaming dynamics.</li>
+            <li>Generate anonymized and aggregated statistics about the community for cultural and academic purposes (we will never share your identifiable individual responses).</li>
+        </ul>
 
-App Usage: Saved events, reviews, survey responses, and preferences.
-
-Activities & Gaming: Scores, story mode levels, achievements, and Frikicoins usage (loyalty points with no real monetary value).
-
-Technical Information: Device model and OS for technical support.
-
-3. Use of Information
-We use your data to:
-
-Manage your account and secure authentication through Supabase.
-
-Personalize event recommendations and gaming dynamics.
-
-Generate anonymized and aggregated statistics for cultural and academic purposes (we will never share identifiable individual responses).
-
-4. Third-Party Sharing
-We do not sell your data. You authorize data usage under these conditions:
-
-Providers: Technical data shared with Supabase Inc. for storage and hosting.
-
-Strategic Partners: Anonymized and aggregated survey data for community census and cultural planning.
-
-Benefits: Basic contact data with sponsors for exclusive benefits, subject to your consent.
-
-5. Security
-We implement technical measures such as:
-
-Encryption of sensitive data.
-
-Restricted access protocols for the Supabase database.
-
-Internal security audits.
-
-6. User Rights and Deletion
-You have the right to access, update, and delete your data. You may request account deletion by emailing udcarkangel@gmail.com or via the App settings. Deletion will be processed within 30 days.
-
-7. Google Authentication
-When signing in with Google, we receive your name, email, and photo. We do not store your password. You can revoke access through your Google account settings at any time.
-
-8. Push Notifications
-We request permission for alerts regarding events, surveys, or system updates. You can disable these in your device settings.
-
-9. Cookies & Local Storage
-We use local device storage to keep your session active and save language/theme preferences, optimizing offline performance.
-
-10. Minors
-The application requires a minimum age of 13. Users under 18 must have authorization from a parent or legal guardian.
-
-11. International Transfers and Updates
-Your data may be processed on servers outside Colombia (global infrastructure). We reserve the right to update this policy and will notify you of any significant changes via the App.
-
-Last Updated: February 2026
+        <h2>4
