--- a/terms-conditions-en.html
+++ b/terms-conditions-en.html
@@ -1,74 +1,125 @@
-Terms and Conditions - Ciudad Friki
-Welcome to Ciudad Friki. By accessing or using our mobile application, you agree to be bound by these terms.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Terms and Conditions - Ciudad Friki</title>
+    <style>
+        :root {
+            --primary-color: #5D3FD3;
+            --text-color: #333;
+            --bg-color: #f4f7f6;
+            --card-bg: #ffffff;
+        }
+        body { 
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; 
+            line-height: 1.6; 
+            color: var(--text-color); 
+            max-width: 850px; 
+            margin: 0 auto; 
+            padding: 40px 20px; 
+            background-color: var(--bg-color); 
+        }
+        .container { 
+            background: var(--card-bg); 
+            padding: 50px; 
+            border-radius: 12px; 
+            box-shadow: 0 4px 15px rgba(0,0,0,0.08); 
+        }
+        h1 { 
+            color: var(--primary-color); 
+            text-align: center;
+            font-size: 2rem;
+            margin-bottom: 30px;
+            border-bottom: 3px solid var(--primary-color);
+            padding-bottom: 15px;
+        }
+        h2 { 
+            color: var(--primary-color); 
+            margin-top: 30px; 
+            font-size: 1.4rem;
+            border-left: 5px solid var(--primary-color);
+            padding-left: 15px;
+        }
+        p, li { 
+            margin-bottom: 15px; 
+            text-align: justify; 
+        }
+        ul {
+            margin-bottom: 20px;
+        }
+        strong { 
+            color: #000; 
+        }
+        .highlight-box {
+            background-color: #fffde7;
+            padding: 15px;
+            border-radius: 8px;
+            margin: 20px 0;
+            border: 1px solid #fff59d;
+        }
+        .footer { 
+            margin-top: 50px; 
+            font-size: 0.9rem; 
+            color: #666; 
+            text-align: center; 
+            border-top: 1px solid #eee; 
+            padding-top: 25px; 
+        }
+        @media (max-width: 600px) {
+            .container { padding: 25px; }
+            h1 { font-size: 1.6rem; }
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Terms and Conditions - Ciudad Friki</h1>
+        
+        <p>Welcome to <strong>Ciudad Friki</strong>. By accessing or using our mobile application, you agree to be bound by these terms and conditions.</p>
 
-1. Contractual Relationship and Intellectual Property
-Software Ownership: All source code, database architecture (Supabase), server logic (Express), React Native development, minigames (including the "Tower Defense" mode), and technical systems are the exclusive property of Mauricio Saldarriaga García (hereinafter, "the Developer").
+        <h2>1. Contractual Relationship and Intellectual Property</h2>
+        <p>Technical processing and software development belong to <strong>Mauricio Saldarriaga García</strong>. The terms are as follows:</p>
+        <ul>
+            <li><strong>Software Ownership:</strong> All source code, database architecture (Supabase), server logic (Express), React Native development, and minigames are the exclusive property of the Developer.</li>
+            <li><strong>Branding Ownership:</strong> Names, logos, and the "Ciudad Friki" trademark are the property of <strong>Corporación Ciudad Friki</strong> (NIT: 901.597.939-0).</li>
+            <li><strong>Restrictions:</strong> You may not reverse engineer or attempt to extract the source code without express permission.</li>
+        </ul>
 
-Branding Ownership: The names, logos, "Ciudad Friki" trademark, and visual brand designs are the property of Corporación Ciudad Friki (NIT: 901.597.939-0).
+        <h2>2. Minimum Age and User Account</h2>
+        <p>You must be at least <strong>13 years old</strong> to use this application. If you are under 18, you declare that you have the consent of your parents or legal guardians. You are responsible for your account security.</p>
 
-Restrictions: You may not decompile, reverse engineer, or attempt to extract the source code of the application without express written permission from the Developer.
+        <h2>3. Frikicoins (Virtual Rewards System)</h2>
+        <div class="highlight-box">
+            <p><strong>Frikicoins</strong> are digital loyalty points with no real monetary value. They are not exchangeable for cash, legal tender, or cryptocurrencies. The Developer reserves the right to adjust balances in case of fraud.</p>
+        </div>
 
-2. Minimum Age and User Account
-You must be at least 13 years old to use this application. If you are under 18, you represent that you have the consent of your parents or legal guardians.
+        <h2>4. Gaming Dynamics and Story Mode</h2>
+        <p>By participating in minigames and the Story Mode, you agree that your progress and scores will be stored for ranking purposes. The use of hacks or bots will result in immediate account termination.</p>
 
-You are responsible for maintaining the confidentiality of your account and for all activities that occur under your credentials.
+        <h2>5. Surveys and Data Management</h2>
+        <p>Participation in surveys is voluntary. You authorize the analysis of your responses in an aggregated and anonymous format for cultural research and community census. Your personal data will never be shared in an identifiable manner without consent.</p>
 
-3. Frikicoins (Virtual Rewards System)
-Frikicoins are digital loyalty points within the Ciudad Friki ecosystem.
+        <h2>6. Event Management and User Roles</h2>
+        <p>Users who publish events are responsible for the accuracy of the information. Ciudad Friki reserves the right to moderate or remove inappropriate or false content. Administrative roles may be revoked for misuse.</p>
 
-No Monetary Value: Frikicoins have no real-world monetary value and are not exchangeable for cash, legal tender, or cryptocurrencies.
+        <h2>7. Code of Conduct</h2>
+        <p>Users agree not to create multiple accounts to abuse the system, not to post discriminatory content, and not to manipulate platform ratings.</p>
 
-The Developer reserves the right to adjust, cancel, or expire Frikicoin balances in cases of fraudulent activity, cheating, or technical exploits.
+        <h2>8. Limitation of Liability</h2>
+        <p>Ciudad Friki is not responsible for the safety of events organized by third parties, temporary service interruptions, or user interactions occurring outside the application.</p>
 
-4. Gaming Dynamics and Story Mode
-By participating in interactive dynamics (Minigames) and the Story Mode, you agree that:
+        <h2>9. Modifications to Terms</h2>
+        <p>We reserve the right to modify these terms at any time. Continued use of the app constitutes acceptance of the new conditions.</p>
 
-Your progress, scores, and rankings will be stored for leaderboards and reward purposes.
+        <h2>10. Governing Law and Contact</h2>
+        <p>These terms are governed by the laws of the <strong>Republic of Colombia</strong>.</p>
 
-The use of bots, hacks, or third-party software to alter scores is strictly prohibited and will result in immediate account termination.
-
-5. Surveys and Data Management
-Voluntary Participation: Completing surveys is entirely optional.
-
-Data Use: You authorize Ciudad Friki to analyze your responses in an aggregated and anonymous format for cultural research, community census, and academic purposes in collaboration with non-commercial strategic partners.
-
-Privacy: Your personal data will never be shared in an identifiable manner without your explicit consent.
-
-6. Event Management and User Roles
-Responsibility: Users who publish events are solely responsible for the accuracy and legality of the information provided.
-
-Moderation: We reserve the right to remove or edit content that is false, misleading, illegal, or violates third-party rights.
-
-Roles: Administrative roles (Worker, Technician, Admin) are granted at the project's discretion and may be revoked if misuse of administrative tools is detected.
-
-7. Code of Conduct
-Users agree NOT to:
-
-Create multiple accounts to abuse the rewards system.
-
-Post offensive, discriminatory, or illegal content.
-
-Manipulate surveys, ratings, or reviews.
-
-Use the platform for unauthorized commercial activities or spam.
-
-8. Limitation of Liability
-Ciudad Friki is a connection platform. We are not responsible for:
-
-The quality, safety, or legality of events organized by third parties.
-
-Temporary service interruptions or data loss due to technical updates or force majeure.
-
-Interactions between users occurring outside the platform.
-
-9. Modifications to Terms
-We reserve the right to modify these terms at any time. Significant updates will be notified through the app. Continued use of the app constitutes acceptance of the updated terms.
-
-10. Governing Law and Contact
-These terms are governed by the laws of the Republic of Colombia.
-
-Email: udcarkangel@gmail.com
-
-Entity: Corporación Ciudad Friki (NIT: 901.597.939-0)
-
-Last Updated: February 2026
+        <div class="footer">
+            <strong>Last updated:</strong> February 2026<br>
+            <strong>Contact:</strong> udcarkangel@gmail.com<br>
+            Ciudad Friki &copy; 2026
+        </div>
+    </div>
+</body>
+</html>
