--- a/politica-privacidad-es.html
+++ b/politica-privacidad-es.html
@@ -115,4 +115,30 @@
         </ul>
 
         <h2>6. Derechos del Usuario</h2>
-        <p>Tienes derecho a conocer, actualizar, rectificar y suprimir tus datos. Puedes solicitar la eliminación
+        <p>Tienes derecho a conocer, actualizar, rectificar y suprimir tus datos. Puedes solicitar la eliminación de tu cuenta enviando un correo a <strong>udcarkangel@gmail.com</strong> o usando la opción dentro de la App. Procesaremos la eliminación en un plazo máximo de <strong>30 días</strong>.</p>
+
+        <h2>7. Autenticación con Google</h2>
+        <p>Al iniciar sesión con Google, recibimos tu nombre, email y foto. No almacenamos tu contraseña. Puedes revocar este acceso desde tu cuenta de Google en cualquier momento.</p>
+
+        <h2>8. Notificaciones Push</h2>
+        <p>Solicitamos permiso para enviarte alertas sobre eventos, encuestas o actualizaciones del sistema. Puedes desactivarlas desde la configuración de tu dispositivo.</p>
+
+        <h2>9. Cookies y Almacenamiento Local</h2>
+        <p>Utilizamos el almacenamiento local del dispositivo para mantener tu sesión activa y guardar preferencias de idioma o tema, optimizando el rendimiento offline.</p>
+
+        <h2>10. Menores de Edad</h2>
+        <p>La aplicación requiere una edad mínima de <strong>13 años</strong>. Los menores de 18 años deben contar con la autorización de sus padres o tutores legales.</p>
+
+        <h2>11. Transferencias Internacionales y Cambios</h2>
+        <div class="highlight-box">
+            <p>Tus datos pueden ser procesados en servidores fuera de Colombia (infraestructura global). Nos reservamos el derecho de actualizar esta política; te notificaremos cualquier cambio importante a través de la aplicación.</p>
+        </div>
+
+        <div class="footer">
+            <strong>Última actualización:</strong> Febrero 2026<br>
+            <strong>Contacto:</strong> udcarkangel@gmail.com<br>
+            Ciudad Friki &copy; 2026
+        </div>
+    </div>
+</body>
+</html>
