--- a/privacy-policy-en.html
+++ b/privacy-policy-en.html
@@ -98,4 +98,47 @@
             <li>Generate anonymized and aggregated statistics about the community for cultural and academic purposes (we will never share your identifiable individual responses).</li>
         </ul>
 
-        <h2>4
+        <h2>4. Third-Party Sharing</h2>
+        <p><strong>We do not sell your data</strong> to spammers or marketing companies. You authorize the use of data under these conditions:</p>
+        <ul>
+            <li><strong>Providers:</strong> Technical data shared with <strong>Supabase Inc.</strong> for storage and hosting.</li>
+            <li><strong>Strategic Partners:</strong> Anonymized and aggregated survey data for census studies and cultural policy planning.</li>
+            <li><strong>Benefits:</strong> Basic contact data with sponsors to offer exclusive benefits, always subject to your consent.</li>
+        </ul>
+
+        <h2>5. Security</h2>
+        <p>We implement technical and administrative measures such as:</p>
+        <ul>
+            <li>Encryption of sensitive data.</li>
+            <li>Restricted access protocols to the Supabase database.</li>
+            <li>Internal security audits.</li>
+        </ul>
+
+        <h2>6. User Rights</h2>
+        <p>You have the right to know, update, rectify, and delete your data. You may request the deletion of your account by sending an email to <strong>udcarkangel@gmail.com</strong> or using the option within the App. We will process the deletion within a maximum of <strong>30 days</strong>.</p>
+
+        <h2>7. Google Authentication</h2>
+        <p>When signing in with Google, we receive your name, email, and photo. We do not store your password. You can revoke this access from your Google account at any time.</p>
+
+        <h2>8. Push Notifications</h2>
+        <p>We request permission to send you alerts about events, surveys, or system updates. You can disable them from your device settings.</p>
+
+        <h2>9. Cookies and Local Storage</h2>
+        <p>We use local device storage to keep your session active and save language or theme preferences, optimizing offline performance.</p>
+
+        <h2>10. Minors</h2>
+        <p>The application requires a minimum age of <strong>13 years</strong>. Users under 18 must have authorization from their parents or legal guardians.</p>
+
+        <h2>11. International Transfers and Changes</h2>
+        <div class="highlight-box">
+            <p>Your data may be processed on servers outside of Colombia (global infrastructure). We reserve the right to update this policy; we will notify you of any significant changes through the application.</p>
+        </div>
+
+        <div class="footer">
+            <strong>Last updated:</strong> February 2026<br>
+            <strong>Contact:</strong> udcarkangel@gmail.com<br>
+            Ciudad Friki &copy; 2026
+        </div>
+    </div>
+</body>
+</html>
