--- a/confirmacion.html
+++ b/confirmacion.html
@@ -6,91 +6,83 @@
     <title>¡Cuenta Verificada! - Ciudad Friki</title>
     <style>
         :root {
-            --primary-color: #5D3FD3; /* Morado Ciudad Friki */
-            --accent-color: #FF0000;  /* Rojo detalle (opcional) */
-            --bg-color: #f4f7f6;
+            --bg-dark: #0f172a; /* Azul muy oscuro/negro como tu splash */
+            --primary-red: #e11d48; /* Rojo vibrante del logo */
+            --text-light: #f8fafc;
         }
         body { 
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif; 
-            background-color: var(--bg-color); 
+            font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; 
+            background-color: var(--bg-dark); 
             display: flex; 
             justify-content: center; 
             align-items: center; 
             height: 100vh; 
             margin: 0; 
+            color: var(--text-light);
         }
         .card { 
-            background: white; 
+            background: #1e293b; /* Un tono grisáceo azulado para contraste */
             padding: 40px; 
-            border-radius: 20px; 
-            box-shadow: 0 10px 30px rgba(0,0,0,0.1); 
+            border-radius: 24px; 
+            box-shadow: 0 20px 50px rgba(0,0,0,0.5); 
             text-align: center; 
-            max-width: 450px; 
+            max-width: 400px; 
             width: 90%;
+            border: 1px solid rgba(225, 29, 72, 0.3); /* Borde sutil rojo */
         }
-        .icon-container {
+        .icon-circle {
             width: 80px;
             height: 80px;
-            background-color: #e8f5e9;
+            background: var(--primary-red);
             border-radius: 50%;
             display: flex;
             justify-content: center;
             align-items: center;
             margin: 0 auto 20px;
+            box-shadow: 0 0 20px rgba(225, 29, 72, 0.4);
         }
         .checkmark {
-            color: #4CAF50;
-            font-size: 50px;
-            font-weight: bold;
+            color: white;
+            font-size: 45px;
         }
         h1 { 
-            color: var(--primary-color); 
             margin-bottom: 10px;
             font-size: 24px;
+            letter-spacing: 1px;
         }
         p { 
-            color: #666; 
-            line-height: 1.5;
-            margin-bottom: 25px;
-        }
-        .app-name {
-            font-weight: bold;
-            color: var(--primary-color);
+            color: #cbd5e1; 
+            line-height: 1.6;
+            margin-bottom: 30px;
         }
         .btn { 
             display: inline-block; 
-            padding: 12px 30px; 
-            background-color: var(--primary-color); 
+            padding: 14px 30px; 
+            background-color: var(--primary-red); 
             color: white; 
             text-decoration: none; 
-            border-radius: 10px; 
+            border-radius: 12px; 
             font-weight: bold;
-            transition: transform 0.2s;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            transition: all 0.3s ease;
         }
         .btn:hover {
-            transform: scale(1.05);
-        }
-        .footer-logo {
-            margin-top: 30px;
-            font-size: 14px;
-            color: #999;
+            background-color: #be123c;
+            transform: translateY(-2px);
+            box-shadow: 0 5px 15px rgba(225, 29, 72, 0.4);
         }
     </style>
 </head>
 <body>
     <div class="card">
-        <div class="icon-container">
+        <div class="icon-circle">
             <span class="checkmark">✓</span>
         </div>
-        <h1>¡Verificación Exitosa!</h1>
-        <p>Gracias por unirte a <span class="app-name">Ciudad Friki</span>. Tu cuenta ha sido activada correctamente.</p>
-        <p>Ya puedes volver a la aplicación para explorar eventos, completar encuestas, divertirte y ganar Frikicoins.</p>
+        <h1>¡VERIFICACIÓN EXITOSA!</h1>
+        <p>Tu cuenta de <strong>Ciudad Friki</strong> ha sido activada. El multiverso de eventos y el Tower Defense te esperan.</p>
         
-        <a href="#" class="btn" onclick="window.close()">Volver a la App</a>
-
-        <div class="footer-logo">
-            Ciudad Friki &copy; 2026
-        </div>
+        <a href="#" class="btn" onclick="window.close()">ENTRAR A LA APP</a>
     </div>
 </body>
 </html>
