--- a/confirmacion.html
+++ b/confirmacion.html
@@ -80,9 +80,11 @@
             <span class="checkmark">✓</span>
         </div>
         <h1>¡VERIFICACIÓN EXITOSA!</h1>
-        <p>Tu cuenta de <strong>Ciudad Friki</strong> ha sido activada. El multiverso de eventos y el Tower Defense te esperan.</p>
+        <p>Tu cuenta de <strong>Ciudad Friki</strong> ha sido activada. El multiverso de eventos, las trivias, tus amigos los Frikis y los Frikicoins te esperan.</p>
         
-        <a href="#" class="btn" onclick="window.close()">ENTRAR A LA APP</a>
+        <a href="ciudadfriki://" class="btn">ENTRAR A LA APP</a>
+
+        <span class="hint">Si el botón no abre la app, puedes regresar manualmente.</span>
     </div>
 </body>
 </html>
